[tool.poetry]
name = "twitterapi"
version = "0.1.0"
description = ""
authors = ["Lucas Venícius Alves Santos <lucas.alves.santos19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.14.0"
fastapi = "^0.103.1"
pymongo = "^4.5.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
